# ilias-rs

./: Cargo.toml
src/: client.rs  exercise.rs  folder.rs  lib.rs  local_file.rs  reference.rs
src/client/: file_storage_provider.rs
src/exercise/: assignment.rs  grades.rs
src/exercise/grades/: submission.rs
