[package]
name = "ilias"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
base64 = "0.22.1"
chrono = "0.4.38"
regex = "1.11.1"
reqwest = { version = "0.12.8", features = ["cookies", "json", "multipart", "stream"] }
scraper = "0.20.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["io"] }
